infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          #if we ever want some custom commandline opts to be executed when our container starts up, we can provide them in an option(args) in the containers section
          args:
            [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi',
              '5s',
              '-hbt',
              '5s',
              '-hbf',
              '2',
              '-SD',
              '-cid',
              'ticketing',
            ]
#'args' is an array of arguments to provide to the Primary command that gets executed when the container is built out of our img
# hb stands for heartbeat. its a req that the NATS SS is going to send to all of its diff connected clients every few secs(5s in our case). This is a health check to make sure that the clients are still running.
# hbi is how often the hb req is made to each client
# hbt is how long each client has to respond
# hbf is the no of times each client can fail b4 the NATS SS assumes that the connection is dead and gone
# -p is the port to access NATS SS on
# -m is the monitoring port
# cid is the cluster ID. the value we provide it is 'ticketing'. therefore whenever we try to connect to nats using nats.connect() the 1st arg we pass in is 'ticketing'(cluster id)
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
