infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' #tells nginx that some of the paths we list below have regex in them
spec:
  rules:
    - host: ticketing.dev
      http:
        paths: #inside paths we list out an arr of diff paths. whenever a req comes into ingress nginx, it will attempt to match the path of the incoming req to one of the paths listed inside here IN ORDER.
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-srv
              servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-srv
              servicePort: 3000
          - path: /?(.*) #a catch all. captures ALL the reqs coming in and thus has to be last
            backend:
              serviceName: client-srv
              servicePort: 3000
